src/test/ui/closures/2229_closure_analysis/path-with-array-access.stderr
error[E0658]: attributes on expressions are experimental
  --> $DIR/path-with-array-access.rs:18:13
   |
LL |     let c = #[rustc_capture_analysis]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

warning: the feature `capture_disjoint_fields` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/path-with-array-access.rs:1:12
   |
LL | #![feature(capture_disjoint_fields)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #53488 <https://github.com/rust-lang/rust/issues/53488> for more information

For closure=DefId(0:8 ~ path_with_array_access[317d]::main::{closure#0}): Using new-style capture analysis
error: Capturing node2[Deref,(1, 0)] -> ImmBorrow
  --> $DIR/path-with-array-access.rs:22:13
   |
LL |             node2.neighbours[0].unwrap().neighbours[0].unwrap().neighbours[0].unwrap().id
   |             ^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0658`.
